--- a/tiny/adder.html
+++ b/tiny/adder.html
@@ -1,11 +1,4 @@
 <html>
-<script>
-    function adder() {
-        arg1 = document.getElementById('num1').value
-        arg2 = document.getElementById('num2').value
-        document.location = '/cgi-bin/adder?' + arg1 + '&' + arg2;
-    }
-</script>
 
 <head>
     <title>Problem 11.10</title>
@@ -14,10 +7,11 @@
 <body>
     <label>Input Two Number to Add</label>
     <br>
-    <input id="num1" type="text" placeholder="NUM1">
-    <input id="num2" type="text" placeholder="NUM2">
-    <button onclick="adder()">Submit</button>
-
+    <form method="GET" action="cgi-bin/adder">
+        <input id="num1" type="text" placeholder="NUM1">
+        <input id="num2" type="text" placeholder="NUM2">
+        <button type="submit">Submit</button>
+    </form>
 </body>
 
 </html>
